public/stylesheets/styles.css
html {
  overflow: hidden;
  width: 100%;
  height: 100%;
  scrollbar-color: grey transparent;
  font-size: 62.5%;
}

::-webkit-scrollbar {
  width: 1.6rem;
}

::-webkit-scrollbar-thumb {
  background-clip: content-box;
  background-color: grey;
  border: 0.2rem solid transparent;
  border-radius: 0.5rem;
}

::-webkit-scrollbar-corner {
  -webkit-appearance: none;
  appearance: none;
}

.s-base--metro::-webkit-scrollbar-thumb {
  border-radius: 0;
}

._kong-test {
  display: flex;
  background: white;
}

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
}

/* css vars */

#ui {
  display: flex;
  justify-content: center;
  align-items: center;
}

:root {
  --color-text: black;
  --color-text-inverted: white;
  --color-base: #f2f2f2;
  --color-disabled: #a3a3a3;
  --color-accent: #4980cc;
  --color-good: #5ac467;
  --color-good-dark: #127a20;
  --color-good-paused: #e3e638;
  --color-bad: #b84b5f;
  --color-gh-purple: #8957e5;

  --color-antimatter: #2196f3;
  --color-infinity: #b67f33;
  --color-eternity: #b341e0;
  --color-dilation: #64dd17;
  --color-reality: #0ba00e;
  --color-reality-light: #d5ffd7;
  --color-celestials: #5151ec;
  --color-prestige--accent: white;

  --color-teresa--base: #5151ec;
  --color-teresa--accent: white;

  --color-effarig--base: #d13737;

  --color-enslaved--base: #f1aa7f;

  --color-v--base: #ead584;

  --color-ra--base: #9575cd;
  --color-ra-pet--teresa: #8596ea;
  --color-ra-pet--effarig: #ea8585;
  --color-ra-pet--enslaved: #f1aa7f;
  --color-ra-pet--v: #ead584;

  --color-laitela--base: white;
  --color-laitela--accent: black;

  --color-pelle--base: crimson;
  --color-pelle--secondary: #00bcd4;
}

:root .t-metro,
:root .t-inverted-metro,
:root .t-s8 {
  --color-text: black;
  --color-text-inverted: white;
  --color-base: #eeeeee;
  --color-disabled: #9e9e9e;
  --color-accent: #2196f3;
  --color-good: #66bb6a;
  --color-good-dark: #388e3c;
  --color-bad: #ef5350;

  --color-infinity: #ff9800;
  --color-eternity: #673ab7;
  --color-reality: #4caf50;
  --color-celestials: #00bcd4;
}

:root .t-dark {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: #455a64;
  --color-disabled: #37474f;
  --color-accent: #1565c0;

  --color-infinity: #ff9800;
  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-dark-metro {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: #455a64;
  --color-disabled: #37474f;
  --color-accent: #2196f3;
  --color-good: #43a047;
  --color-good-dark: #2e7d32;
  --color-bad: #e53935;

  --color-infinity: #ff9800;
  --color-eternity: #673ab7;
  --color-reality: #4caf50;
  --color-celestials: #00bcd4;
  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-s1 {
  --color-text: black;
  --color-text-inverted: #dbd242;
  --color-base: #dbd242;
  --color-disabled: #9a921d;
  --color-accent: black;
  --color-good: #4baf4e;
  --color-good-dark: #3c8b3e;
  --color-bad: #d72621;

  --color-infinity: #7d3c1b;
  --color-eternity: #639565;
  --color-reality: #afa3a5;
  --color-reality-light: #e8e3e4;
  --color-celestials: #f2d6c1;
  --color-prestige--accent: #dbd242;

  --color-pelle--base: #7cb727;
}

:root .t-s4 {
  --color-text: black;
  --color-text-inverted: white;
  --color-base: #1b00ff;
  --color-accent: #1b00ff;
  --color-good: #ff00e0;
  --color-bad: #ff0000;
}

:root .t-s6,
:root .t-s10 {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: black;
  --color-accent: #1565c0;

  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .t-s11 {
  --color-text: #e0e0e0;
  --color-text-inverted: black;
  --color-base: black;
  --color-accent: #fbc21b;

  --color-prestige--accent: black;

  --color-teresa--accent: black;

  --color-laitela--base: black;
  --color-laitela--accent: white;
}

:root .s-base--metro {
  --var-border-width: 0.1rem;
  --var-border-radius: 0;
}

/* end css vars */

body {
  overflow: hidden;
  width: 100%;
  height: 100%;
  text-align: center;
  font-family: Typewriter, serif;
  font-size: 1.1rem;
  font-weight: 300;
  line-height: 1.5;
  color: #4f5957;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}

._kong-test body {
  overflow-y: auto;
  width: 1150px;
  height: 800px;
  border: 0.1rem solid black;
  margin: auto;
}

@font-face {
  font-family: "Open Sans Condensed";
  font-style: normal;
  font-weight: 300;
  src:
    local("Open Sans Cond Light"),
    local("OpenSans-CondensedLight"),
    url("https://fonts.gstatic.com/s/opensanscondensed/v10/gk5FxslNkTTHtojXrkp-xBEur64QvLD-0IbiAdTUNXE.woff2") format("woff2");
  unicode-range:
    U+0000-00FF,
    U+0131,
    U+0152-0153,
    U+02C6,
    U+02DA,
    U+02DC,
    U+2000-206F,
    U+2074,
    U+20AC,
    U+2212,
    U+2215,
    U+E0FF,
    U+EFFD,
    U+F000;
}

@font-face {
  font-family: Typewriter;
  src: url("MonospaceTypewriter.ttf");
}

@font-face {
  font-family: "Noto Sans";
  src: url("MonospaceTypewriter.ttf");
  unicode-range: U+F420-F430, U+2BC5-2BC6;
}

@font-face {
  font-family: Runescape;
  src: url("Runescape.ttf");
}

@font-face {
  font-family: Barrio;
  src: url("Barrio-Regular.ttf");
}

@font-face {
  font-family: "Font Awesome";
  src: url("fa-solid-900.ttf");
}

@font-face {
  font-family: Typewriter;
  src: url("BlobEmoji-Bold.ttf"), url("MonospaceTypewriter.ttf");
}

/* Background for s6 and s10 is not displayed by default */
#stars {
  display: none;
}

button:focus {
  outline: none;
}

/* #region TT shop */

.time-theorem-buttons {
  display: flex;
  width: 55.5rem;
  position: absolute;
  bottom: 0;
  z-index: 2;
  align-items: flex-end;
  font-family: Typewriter, serif;
  color: var(--color-text);
  pointer-events: all;
}
/* ... */

